🔧 fix: 태그별 조회 기능 변경